# OCR-Extractor-API

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
